# hid-lab

./: .gitignore  CMakeLists.txt  README.md
inc/: flash_config.h  input_tasks.h  tusb_config.h
platform/: flash_config.h
src/: input_tasks.c  main.c  usb_descriptors.c  write_config.c
